# GestureRecognizerForCplus

./: README.md  release_android.sh
GestureRecognizer/: CMakeLists.txt  main.cpp
GestureRecognizer.xcodeproj/: project.pbxproj
GestureRecognizer.xcodeproj/project.xcworkspace/xcuserdata/yangzc.xcuserdatad/: UserInterfaceState.xcuserstate
GestureRecognizer.xcodeproj/xcuserdata/yangzc.xcuserdatad/xcschemes/: ncnn-recognizer.xcscheme  xcschememanagement.plist
GestureRecognizer/frameworks/ncnn.framework/Versions/A/: ncnn
GestureRecognizer/json/: json_batchallocator.h
GestureRecognizer/recognizer/: common_type.cpp  common_type.h  gesture.cpp  gesture.h  gesture_utils.cpp  gesture_utils.h  lenet.id.h  polyline.cpp  polyline.h  recognizer.cpp  recognizer.h  utils.cpp  utils.h
GestureRecognizer/recognizer/classification/: classification.cpp  classification.h  gesture_classification.cpp  gesture_classification.h  ncnn_classification.cpp  ncnn_classification.h
GestureRecognizer/recognizer/matcher/: distance_matcher.cpp  distance_matcher.h  matcher.cpp  matcher.h  vector_matcher.cpp  vector_matcher.h
GestureRecognizer/recognizer/reducer/: distance_reducer.cpp  distance_reducer.h  douglaspeukcer_reducer.cpp  douglaspeukcer_reducer.h  reducer.cpp  reducer.h  vector_reducer.cpp  vector_reducer.h
GestureRecognizer/recognizer/rule/: gesture_pair_rule.cpp  gesture_pair_rule.h  ncnn_pair_rule.cpp  ncnn_pair_rule.h  pair_rule.cpp  pair_rule.h
GestureRecognizer/recognizer/template/: template_manager.cpp  template_manager.h
GestureRecognizer/recognizer/template/parser/: template_parser.cpp  template_parser.h  template_parser_json.cpp  template_parser_json.h
ncnn-recognizer/: ncnn_recognizer.h  ncnn_recognizer.m
